wip: carousel before trying responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+li {
+  list-style: none;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
