GamePage: add more user cards to help styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ li {
   --color-primary-blue: #220CEA;
   --color-primary-black: #0F0F0F;
   --color-primary-yellow: #FFD221;
-  --breakpoint-ssm: 28rem;
+  --breakpoint-xsm: 28rem;
   --container-site-width: 1120px;
 }
 
